Created a class for to do items and updated read me
module 2 complete

--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,10 @@ FLASK_ENV=development
 
 # Change the following values for local development.
 SECRET_KEY=secret-key
+
+#trello keys
+TRELLO_KEY= this is where the trello api key goes
+TRELLO_TOKEN= this is where the trello api token goes
+TRELLO_TODO_IDLIST= this is the do card list id in trello
+TRELLO_DOING_IDLIST= this is the doing card list id in trello
+TRELLO_COMPLETE_IDLIST= this is the completed/done card list id in trello
