--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ flask = "^1.1.2"
 python-dotenv = "^0.14.0"
 gunicorn = "^20.0.4"
 requests = "^2.25.1"
+pytest = "^6.2.4"
 
 [tool.poetry.dev-dependencies]
 
